--- a/src/assets/scss/quiz.scss
+++ b/src/assets/scss/quiz.scss
@@ -7,7 +7,9 @@
 	border-radius: $border-radius;
 	overflow: hidden;
 	text-align: center;
-	&__questions {}
+	&__questions {
+		padding-bottom: .5rem;
+	}
 
 	&__progress {
 		background: var(--red-color);
