adding progresss bar

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -48,6 +48,7 @@ table {
 
 :root {
 	--bg-main-color: #e0e0e0;
+	--bg-progress-color: #9c9c9c;
 	--red-color: #e02d54;
 	--green-color: #00b150;
 	--green-blue-color: #1ff8ff;
