--- a/src/assets/scss/quiz.scss
+++ b/src/assets/scss/quiz.scss
@@ -23,7 +23,7 @@
 		top: 0;
 		left: 0;
 		height: 100%;
-		background: var(--red-color);
+		background: var(--green-blue-color);
 		transition: .3s;
 	}
 
