fix style in quiz scss

--- a/src/assets/scss/quiz.scss
+++ b/src/assets/scss/quiz.scss
@@ -22,7 +22,7 @@
 		position: absolute;
 		top: 0;
 		left: 0;
-		height: 100%;
+		bottom: 0;
 		background: var(--green-blue-color);
 		transition: .3s;
 	}
